samples/_failures_safe/1761152521_5ebdf9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_614fc210.c: In function ‘main’:
./samples/SAFE/__tmp_614fc210.c:152:27: error: expected ‘;’ at end of input
  152 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_614fc210.c:152:21: error: expected declaration or statement at end of input
  152 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_614fc210.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_614fc210.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_614fc210.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_614fc210.c:152:21: error: expected declaration or statement at end of input
